--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "morgan": "~1.7.0",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
+    "react-dropzone": "^3.6.0",
     "react-google-maps": "^4.11.0",
     "react-redux": "^4.4.5",
     "react-router": "^2.8.1",
