show date in post

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "~4.13.4",
     "hjs": "~0.0.6",
     "hogan-middleware": "^0.2.1",
+    "moment": "^2.15.1",
     "mongoose": "^4.6.3",
     "morgan": "~1.7.0",
     "react": "^15.3.2",
@@ -22,6 +23,7 @@
     "react-google-maps": "^4.11.0",
     "react-redux": "^4.4.5",
     "react-router": "^2.8.1",
+    "react-time": "^4.2.0",
     "redux": "^3.6.0",
     "redux-thunk": "^2.1.0",
     "serve-favicon": "~2.3.0",
