--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
+    "build": "NODE_ENV=production webpack && gulp prod",
     "start": "node ./bin/www"
   },
   "dependencies": {
