--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mongoose": "^4.6.3",
     "morgan": "~1.7.0",
     "react": "^15.3.2",
+    "react-bootstrap": "^0.30.5",
     "react-dom": "^15.3.2",
     "react-dropzone": "^3.6.0",
     "react-google-maps": "^4.11.0",
