--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "bcrypt": "^0.8.7",
     "bluebird": "^3.4.6",
     "body-parser": "~1.15.1",
     "compression": "^1.6.2",
