--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "build": "NODE_ENV=production webpack && gulp prod",
+    "prestart": "npm run build",
     "start": "node ./bin/www"
   },
   "dependencies": {
@@ -33,9 +34,7 @@
     "redux": "^3.6.0",
     "redux-thunk": "^2.1.0",
     "serve-favicon": "~2.3.0",
-    "superagent": "^2.3.0"
-  },
-  "devDependencies": {
+    "superagent": "^2.3.0",
     "babel-core": "^6.17.0",
     "babel-loader": "^6.2.5",
     "babel-preset-es2015": "^6.16.0",
@@ -48,6 +47,6 @@
     "gulp-minify-css": "^1.2.4",
     "gulp-rename": "^1.2.2",
     "gulp-uglify": "^2.0.0",
-    "webpack": "^1.13.2"
+    "webpack": "^1.13.2"    
   }
 }
