--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "build": "NODE_ENV=production webpack && gulp prod",
-    "prestart": "npm run build",
+    "postinstall": "npm run build",
     "start": "node ./bin/www"
   },
   "dependencies": {
