--- a/package.json
+++ b/package.json
@@ -8,15 +8,28 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "babel-core": "^6.17.0",
+    "babel-loader": "^6.2.5",
+    "babel-preset-es2015": "^6.16.0",
+    "babel-preset-react": "^6.16.0",
     "bcrypt": "^0.8.7",
     "bluebird": "^3.4.6",
     "body-parser": "~1.15.1",
+    "cheerio": "^0.22.0",
     "client-sessions": "^0.7.0",
     "compression": "^1.6.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
     "dotenv": "^2.0.0",
     "express": "~4.13.4",
+    "gulp": "^3.9.1",
+    "gulp-6to5": "^3.0.0",
+    "gulp-autoprefixer": "^3.1.1",
+    "gulp-concat": "^2.6.0",
+    "gulp-less": "^3.1.0",
+    "gulp-minify-css": "^1.2.4",
+    "gulp-rename": "^1.2.2",
+    "gulp-uglify": "^2.0.0",
     "hjs": "~0.0.6",
     "hogan-middleware": "^0.2.1",
     "moment": "^2.15.1",
@@ -35,18 +48,6 @@
     "redux-thunk": "^2.1.0",
     "serve-favicon": "~2.3.0",
     "superagent": "^2.3.0",
-    "babel-core": "^6.17.0",
-    "babel-loader": "^6.2.5",
-    "babel-preset-es2015": "^6.16.0",
-    "babel-preset-react": "^6.16.0",
-    "gulp": "^3.9.1",
-    "gulp-6to5": "^3.0.0",
-    "gulp-autoprefixer": "^3.1.1",
-    "gulp-concat": "^2.6.0",
-    "gulp-less": "^3.1.0",
-    "gulp-minify-css": "^1.2.4",
-    "gulp-rename": "^1.2.2",
-    "gulp-uglify": "^2.0.0",
-    "webpack": "^1.13.2"    
+    "webpack": "^1.13.2"
   }
 }
