--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "gulp-uglify": "^2.0.0",
     "hjs": "~0.0.6",
     "hogan-middleware": "^0.2.1",
+    "jsonwebtoken": "^7.1.9",
     "moment": "^2.15.1",
     "mongoose": "^4.6.3",
     "morgan": "~1.7.0",
