--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-time": "^4.2.0",
     "redux": "^3.6.0",
     "redux-thunk": "^2.1.0",
+    "sendgrid": "^4.7.1",
     "serve-favicon": "~2.3.0",
     "superagent": "^2.3.0",
     "webpack": "^1.13.2"
