--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "babel-preset-es2015": "^6.16.0",
     "babel-preset-react": "^6.16.0",
     "bcrypt": "^0.8.7",
+    "bcryptjs": "^2.4.0",
     "bluebird": "^3.4.6",
     "body-parser": "~1.15.1",
     "cheerio": "^0.22.0",
