--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-dropzone": "^3.6.0",
     "react-google-maps": "^4.11.0",
     "react-loader": "^2.4.0",
+    "react-loading": "0.0.9",
     "react-redux": "^4.4.5",
     "react-router": "^2.8.1",
     "react-time": "^4.2.0",
