--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^2.0.0",
     "express": "~4.13.4",
     "firebase": "^3.6.0",
+    "fs": "0.0.1-security",
     "gulp": "^3.9.1",
     "gulp-6to5": "^3.0.0",
     "gulp-autoprefixer": "^3.1.1",
