--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "serve-favicon": "~2.3.0",
     "sha1": "^1.1.1",
     "superagent": "^2.3.0",
+    "sweetalert": "^1.1.3",
     "url-to-image": "^1.0.0",
     "webpack": "^1.13.2",
     "webpage": "^0.3.0"
